--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "*",
-    "@angular/compiler": "*",
-    "@angular/core": "*",
-    "@angular/forms": "*",
-    "@angular/http": "*",
-    "@angular/platform-browser": "*",
-    "@angular/platform-browser-dynamic": "*",
-    "@angular/router": "*",
-    "@angular/upgrade": "*",
-    "bootstrap": "3.3.6",
+    "@angular/common": "^5.2.5",
+    "@angular/compiler": "^5.2.5",
+    "@angular/core": "^5.2.5",
+    "@angular/forms": "^5.2.5",
+    "@angular/http": "^5.2.5",
+    "@angular/platform-browser": "^5.2.5",
+    "@angular/platform-browser-dynamic": "^5.2.5",
+    "@angular/router": "^5.2.5",
+    "@angular/upgrade": "^5.2.5",
     "angular-in-memory-web-api": "0.3.1",
+    "bootstrap": "3.3.6",
     "core-js": "2.4.1",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.1",
-    "zone.js": "0.7.2",
-    "systemjs": "0.19.27"
+    "systemjs": "0.19.27",
+    "zone.js": "0.7.2"
   },
   "devDependencies": {
     "bower-files": "3.11.3",
